adsb-stack/adsb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adsb-web
  namespace: adsb
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: adsb.w3rdw.radio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tar1090
            port:
              number: 8078
